FIxing various errors